# lactor

./: .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
.githooks/: pre-commit
benchmark/: bench_extraction.js  bench_frontend_memory.html  bench_integrity.py  bench_latency.py  bench_memory.py  bench_stability.py  run_all.py
benchmark/fixtures/: extra-long.txt  long.txt  medium.txt  short.txt
benchmark/fixtures/html/: en-ap-news-parents.html  en-bbc-news.html  en-cryptography-dvd.html  en-dev-to-blog.html  en-github-agents-md.html  en-mdn-docs.html  en-medium-flutter.html  en-opencode-tools.html  en-personal-blog.html  en-wsj-iran.html  zh-zhihu-home.html  zh-zhihu-question.html
docs/archived/: 2026-03-20-lactor-design.md  2026-03-20-lactor-implementation.md
docs/implementation-artifacts/: deferred-work.md  spec-gh-15-extract-reader-ui.md  spec-gh-15-reader-state-machine.md
docs/ref/: extension-pipeline.md  extension-playback.md  gotchas.md  permissions.md  ws-protocol.md
docs/superpowers/plans/: 2026-03-22-readable-extraction-phase-1-plan.md  2026-03-22-readable-extraction-phase-2-plan.md  2026-03-22-readable-extraction-phase-3-plan.md
extension/: background.js  config.js  config.test.js  manifest.json
extension/content/: extractor.js  overlay.js
extension/lib/: defuddle.min.js
extension/popup/: popup.html  popup.js
extension/reader/: reader-core.js  reader-core.test.js  reader.css  reader.html  reader.js
src/lactor/: main.py  tts.py  ws_handler.py
tests/: test_origin.py  test_tts.py  test_voices.py  test_ws_handler.py  test_ws_proxy.py
(+29 files in other folders)
