[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lactor"
version = "0.1.0"
description = "Local TTS backend for Lactor browser extension"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "edge-tts>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[project.scripts]
lactor = "lactor.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/lactor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names, etc.)
    "I",      # isort (import ordering)
    "B",      # flake8-bugbear (likely bugs and design problems)
    "C4",     # flake8-comprehensions (unnecessary comprehension patterns)
    "UP",     # pyupgrade (use modern Python syntax)
    "PLC",    # pylint convention — includes PLC0415 (import-outside-toplevel)
    "PLE",    # pylint errors
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments (common in FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # allow magic values in test assertions
"benchmark/**" = ["F841"] # allow unused variables in benchmark scripts

[tool.pytest.ini_options]
asyncio_mode = "auto"
